# LocalMind

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  TODO.md  app.config.json  docker-compose.yml  index.html  package.json  tailwind.config.js  vite.config.ts
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.base  README.md  __init__.py  bundle_backend.py  config.py  document_processor.py  main.py  pyproject.toml  requirements.txt  run_dev.sh  test_api.py  vector_store.py  version.py
backend/agents/: __init__.py  chat_agent.py  title_agent.py  youtube_agent.py
backend/api/: __init__.py  chat.py  chats.py  config.py  documents.py  health.py  mcp.py  search.py  settings.py  tools.py  youtube.py
backend/config/: __init__.py  app_config.py  app_settings.py  config_manager.py  settings.py
backend/core/: __init__.py  exceptions.py  middleware.py
backend/database/: __init__.py  connection.py  migrator.py  models.py
backend/database/migrations/: 20241201000000_initial_schema.py  20241210000000_add_is_pinned_to_chats.py  20241215000000_create_llm_providers.py  20241216000000_add_model_provider_to_chats.py  20241220000000_add_tool_calls_to_messages.py  20241223000000_add_documents.py  (+1 more)
backend/models/: __init__.py  database.py  schemas.py
backend/services/: __init__.py  chat_service.py  database_service.py  document_service.py  llm_service.py  mcp_service.py  vector_service.py  youtube_service.py
backend/utils/: __init__.py  timestamp_utils.py  web_scraper.py  youtube_utils.py
src/: App.tsx  (+4 more)
(+76 files in other folders)
